Bottom menu not showing fix

--- a/src/App.css
+++ b/src/App.css
@@ -864,7 +864,7 @@
     position: relative;
     height: 100vh;
     z-index: 0;
-    overflow: hidden;
+    overflow: hidden auto;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
